# Voxa

./: .gitignore  README.md
backend/: main.py
backend/ai/: embedding_engine.py  llm_client.py  parser.py  prompts.py  recall_client.py  transcript_processor.py  whisper_engine.py
backend/config/: settings.py
backend/database/: mongodb.py
backend/reminders/: reminder_checker.py  reminder_parser.py  reminder_repository.py  reminder_service.py
backend/services/: audio_service.py  processing_service.py  s3_service.py  transcription_service.py
backend/summaries/: daily_summary_service.py  summary_repository.py
backend/vector_db/: chroma_client.py  memory_formatter.py  memory_recall.py  search_service.py
chroma_storage/: chroma.sqlite3
docs/: VOXA_Hardware_Component_Guide.docx
firmware/: platformio.ini
firmware/src/display/: Display.cpp  Display.h
firmware/src/ui/: Theme.cpp  Theme.h
simulator/: CMakeLists.txt
simulator/data/: history.json  ideas.json  memories.json  memory.json  questions.json  recordings.json  reminders.json  search.json  settings.json
simulator/src/: main.cpp
simulator/src/core/: Application.cpp  Application.h  AudioEngine.cpp  AudioEngine.h  Screen.h  Widget.h
simulator/src/core/app/: Application.cpp  Application.h
simulator/src/core/models/: History.h  Idea.h  Memory.h  Question.h  Recording.h  Reminder.h  Settings.h
simulator/src/core/navigation/: ScreenManager.cpp  ScreenManager.h
simulator/src/core/platform/: Platform.h  SimulatorPlatform.cpp  SimulatorPlatform.h
simulator/src/core/services/: BatteryService.cpp  BatteryService.h  HistoryService.cpp  HistoryService.h  IdeaService.cpp  IdeaService.h  MemoryService.cpp  MemoryService.h  QuestionService.cpp  QuestionService.h  RecordingService.cpp  RecordingService.h  ReminderService.cpp  ReminderService.h  SearchService.cpp  SearchService.h  SettingsService.cpp  SettingsService.h  StorageService.cpp  StorageService.h  TimeService.cpp  TimeService.h
simulator/src/core/storage/: JsonStorage.cpp  JsonStorage.h  MemoryStorage.cpp  MemoryStorage.h
simulator/src/graphics/: Colors.cpp  Colors.h  Fonts.cpp  Fonts.h  Icons.cpp  Icons.h  Renderer.cpp  Renderer.h
simulator/src/screens/: BootScreen.cpp  BootScreen.h  DetailScreen.cpp  DetailScreen.h  HomeScreen.cpp  HomeScreen.h  IdeasScreen.cpp  IdeasScreen.h  OthersScreen.cpp  OthersScreen.h  QuestionsScreen.cpp  QuestionsScreen.h  RecordScreen.cpp  RecordScreen.h  ReminderScreen.cpp  ReminderScreen.h  ScreenCommon.cpp  ScreenCommon.h  SearchScreen.cpp  SearchScreen.h  SettingsScreen.cpp  SettingsScreen.h  SyncStatusScreen.cpp  SyncStatusScreen.h
simulator/src/widgets/: Button.cpp  Button.h  Card.cpp  Card.h  CircleButton.CPP  CircleButton.h  FloatingButton.cpp  FloatingButton.h  ListTile.cpp  ListTile.h  ProgressBar.cpp  ProgressBar.h  SearchBar.cpp  SearchBar.h  StatusBar.CPP  StatusBar.h
tests/: date_test.py  llama_test.py  tempCodeRunnerFile.py  test_alarm_insert.py  test_chroma.py  test_chroma_insert.py  test_count.py  test_daily_summary.py  test_mongo.py  test_recall.py  test_search.py  test_sound.py
ui/squareline/VOXA_OS/: VOXA_OS.sll  VOXA_OS.spj
